2006-05-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks9
	* info/patches/ck_server_patches/patch-2.6.16-cks9: added

2006-05-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck9
	* info/patches/ck_patches/patch-2.6.16-ck9: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt18
	* info/patches/realtime_patches/patch-2.6.16-rt18: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.12
	* info/patches/maintenance_patches/patch-2.6.16.12: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc3-mm1
	* info/patches/mm_patches/2.6.17-rc3-mm1: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks8
	* info/patches/ck_server_patches/patch-2.6.16-cks8: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck8
	* info/patches/ck_patches/patch-2.6.16-ck8: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks7
	* info/patches/ck_server_patches/patch-2.6.16-cks7: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck7
	* info/patches/ck_patches/patch-2.6.16-ck7: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc2-mm1
	* info/patches/mm_patches/2.6.17-rc2-mm1: added

2006-04-26 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17-rc3
	* info/patches/PRE_2_6/patch-2.6.17-rc3: added

2006-04-24 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.11
	* info/patches/maintenance_patches/patch-2.6.16.11: added

2006-04-24 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.10